--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	<meta property="og:description" content="Milano 26/11 - Convegno di presentazione della nuova legge regionale per la rigenerazione urbana e territoriale in Lombardia" />
 <meta property="og:title" content="Nuove opportunità per la rigenerazione" />
 <meta property="og:image" content="https://www.regione.lombardia.it/wps/wcm/connect/0a541ddb-4cb0-447d-8d60-e0cc2ef2fa98/imm-asset-social-Rigenerazione-urbana.jpg?MOD=AJPERES" />
+<meta property="og:image:width" content="1200" />
+<meta property="og:image:height" content="600" />
         <title>Example</title>
     </head>
     <body>
